# gtest-cpp-learning

./: .gitignore  CMakeLists.txt
arithmetic_libs/: CMakeLists.txt  Operations.cpp  Operations.h
google_tests/: CMakeLists.txt  HelloTest.cpp
